# AdventOfCode-Solvings

./: .changie.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.changes/: 0.10.0.md  0.11.0.md  0.12.0.md  0.13.0.md  0.14.0.md  0.15.0.md  0.16.0.md  0.5.0.md  0.6.0.md  0.7.0.md  0.8.0.md  0.9.0.md
.changes/unreleased/: Added-20230621-230230.yaml
aoc_solvings/common/: log.py  template.py
aoc_solvings/data/: input2022-20.txt  input2022-21.txt
aoc_solvings/src_2016/day-1/src/: main.rs
aoc_solvings/src_2016/day-2/src/: main.rs
aoc_solvings/src_2016/day-3/: Cargo.toml
aoc_solvings/src_2016/day-3/src/: main.rs
aoc_solvings/src_2020/: Cargo.toml
aoc_solvings/src_2020/day-1/src/: main.rs
aoc_solvings/src_2020/day-2/: Cargo.toml
aoc_solvings/src_2020/day-2/src/: main.rs
aoc_solvings/src_2020/day-3/src/: main.rs
aoc_solvings/src_2020/day-4/src/: main.rs
aoc_solvings/src_2020/day-5/src/: main.rs
aoc_solvings/src_2020/day-6/src/: main.rs
aoc_solvings/src_2020/day-7/: Cargo.toml
aoc_solvings/src_2020/day-7/src/: main.rs
aoc_solvings/src_2020/rust/: Cargo.toml  README.md
aoc_solvings/src_2020/rust/src/: lib.rs  main.rs
aoc_solvings/src_2021/: __init__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc_solvings/src_2022/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc_solvings/src_2023/rust/: Cargo.toml  README.md
aoc_solvings/src_2023/rust/src/: main.rs
aoc_solvings/src_2023/rust/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc_solvings/src_2023/rust/src/etc/: mod.rs  solution.rs
aoc_solvings/src_2023/rust/src/parser/: cli.rs  mod.rs
aoc_solvings/src_2024/cpp/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  compile_commands.json
aoc_solvings/src_2024/cpp/script/: pre-commit.sh
aoc_solvings/src_2024/cpp/src/: main.cpp
aoc_solvings/src_2024/cpp/src/solutions/: day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day04.hpp  day05.cpp  day05.hpp  day06.cpp  day06.hpp  day07.cpp  day07.hpp  day08.cpp  day08.hpp  day09.cpp  day09.hpp  day10.cpp  day10.hpp  day11.cpp  day11.hpp  day12.cpp  day12.hpp  day13.cpp  day13.hpp  day14.cpp  day14.hpp  day15.cpp  day15.hpp  day16.cpp  day16.hpp  day17.cpp  day17.hpp  day18.cpp  day18.hpp  day19.cpp  day19.hpp  day20.cpp  day20.hpp  (+10 more)
aoc_solvings/src_2024/cpp/src/utils/: input_reader.cpp  input_reader.hpp  line_reader.cpp  line_reader.hpp
