[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
hashbrown = "0.11"
multimap = "0.9.0"

# main.rs dependencies
regex = "1.5"
once_cell = "1.9"

# lib proc-macro dependencies
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
